# gig-polyhedra-stacking

./: README.md  instance.json  main.py  pyproject.toml
solver/: exporter.py  importer.py  intersection.py  random_solver.py  types.py  vizualizer.py
solver/shape_utils/: polyhedron.py
utils/: timer.py
