[project]
name = "gig-polyhedra-stacking"
version = "0.1.0"
description = "M2 GIG Polyhedra Stacking Problem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
